--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,4 +34,6 @@ jobs:
 
       - name: Desplegar en Cloud Run
         run: |
-          gcloud run deploy ci-cd-recommender-app-uhem --image us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/ci-cd-recommender-app-UHem:latest --platform managed --allow-unauthenticated
+          gcloud run deploy ci-cd-recommender-app-uhem 
+            --image us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/ci-cd-recommender-app-uhem:latest 
+            --platform managed --allow-unauthenticated
